--- a/index.html
+++ b/index.html
@@ -46,13 +46,9 @@
                 é só aproveitar sua locação e devolver o carro no mesmo local onde pegou.</p>
             <h2>Praticidade</h2>
             <p>Além da facilidade no aluguel do carro, a Turbi oferece outras comodidades para seus clientes, como a
-                possibilidade de deixar o carro em qualquer vaga de estacionamento dentro da área de atuação da empresa
-                e a cobrança por hora, sem a necessidade de devolução em locais específicos. Isso tudo sem burocracias,
-                taxas extras ou multas por atraso na devolução.</p>
-            <h2>Cuidados com a higienização</h2>
-            <p>Em tempos de pandemia, a Turbi se preocupa com a saúde e segurança de seus usuários e colaboradores. Por
-                isso, os carros são higienizados antes e depois de cada locação, com produtos recomendados pelos órgãos
-                de saúde.</p>
+                possibilidade de deixar o carro em um estacionamento seguro dentro da área de atuação da empresa
+                e a cobrança por hora. Isso tudo sem burocracias, taxas extras ou multas por atraso na devolução.</p>
+          
             <h2>Aproveite agora o desconto</h2>
             <p>A Turbi é uma opção inteligente para quem busca economia, praticidade e segurança na hora de alugar um
                 carro. Além disso, os cupons de desconto e as promoções exclusivas garantem ainda mais benefícios para
